# Forex-Machine-learning

./: .gitignore  Euro forex predictions  Forex data downloader  Forex data downloader.ipynb  README.md  Web scrapping.ipynb  eur-pln-forex.ipynb  euro-pln-forex.ipynb  main.py  prototype.ipynb  pyproject.toml
src/core/: config.py  run_pipeline.py
src/data gathering/: data_downloader.py
src/model/: classifier.py  metrics.py  pipeline.py
src/preprocessing/: engineering.py  loader.py  preprocessing.py
src/test/: conftest.py  test_data.py  test_features.py  test_training.py
