[project]
name = "forex-machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.13.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "yfinance>=1.2.0",
]
